vertical align fix

--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -115,7 +115,6 @@ button{
 * {
   background-repeat: no-repeat;
   position: relative;
-  vertical-align: middle;
 }
 
 *::selection {
@@ -489,7 +488,7 @@ a.pill{
   }
 }
 
-.border-right{
+.divider-right{
   &:after{
     position: absolute;
     content: "";
